fixed element spacing for MS Edge browser

--- a/client/src/components/timerUI/TimerUI.module.css
+++ b/client/src/components/timerUI/TimerUI.module.css
@@ -22,7 +22,7 @@
 #timer {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   flex-basis: 100%;
@@ -40,7 +40,7 @@
   display: flex;
   width: 100%;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 
